# panda_moveit_gazebo

src/gazebo-models/: panda.urdf
src/multi_panda_demos/: CMakeLists.txt  package.xml
src/multi_panda_demos/launch/: pick_place.launch.py
src/multi_panda_demos/src/: pick_place.cpp
src/multi_panda_description/: CMakeLists.txt  package.xml
src/multi_panda_description/config/: gazebo_controller_manager.yaml
src/multi_panda_description/urdf/: multi_panda.urdf  multi_panda.urdf.xacro  panda.urdf  panda.urdf.xacro  single_panda.urdf.xacro
src/multi_panda_description/worlds/: empty.sdf  pick_place.sdf
src/multi_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/multi_panda_moveit_config/config/: dual_panda_robots.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  multi_panda.ros2_control.xacro  multi_panda.srdf  multi_panda.urdf.xacro  ros2_controllers.yaml
src/multi_panda_moveit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
